build(pipeline): build pipeline updates
build pipeline updated with sementic-release, testing and linting scripts with docs

BREAKING CHANGE: build pipeline changes with sementic-release, testing and linting scripts with
codumentation updates

chore #3, chore #5, fix #9

--- a/projects/web-app/src/app/common/top-menu/top-menu.component.html
+++ b/projects/web-app/src/app/common/top-menu/top-menu.component.html
@@ -2,7 +2,7 @@
     <h1 class="logo">
     </h1>
     <a class="header-title" [routerLink]="['']">
-        <h1>🌈 NG-TICKER DEMO 🚀</h1>
+        <h1 class="app-title">🌈 NG-TICKER DEMO 🚀</h1>
     </a>
 
     <div class="header-info">
