feat(ng-ticker): step on hover, play state and docs updated
feat #1, feat #2

--- a/projects/ng-ticker/src/lib/ng-ticker.component.html
+++ b/projects/ng-ticker/src/lib/ng-ticker.component.html
@@ -1,5 +1,8 @@
-<div class="ticker-container">
-    <span #content>
-        <ng-content></ng-content>
-    </span>
+<div class="ticker-container" [ngClass]="{
+    'stop-on-hover': stopOnHover,
+    'play-state-on': playState
+  }">
+  <span #content>
+    <ng-content></ng-content>
+  </span>
 </div>
