--- a/projects/web-app/src/app/app.component.scss
+++ b/projects/web-app/src/app/app.component.scss
@@ -19,3 +19,14 @@
         margin: 10px;
     }
 }
+
+.mb-1 {
+    margin-bottom: 10px;
+}
+
+.btn {
+    color: white;
+    border: 1px solid black;
+    cursor: pointer;
+    // background-color: blue;
+}
