--- a/projects/web-app/src/app/common/top-menu/top-menu.component.html
+++ b/projects/web-app/src/app/common/top-menu/top-menu.component.html
@@ -8,6 +8,11 @@
     <div class="header-info">
         <ul class="header-list">
             <li>
+                <a target="_blank" rel="noopener" href="https://www.npmjs.com/package/ng-ticker">
+                    <img src="assets/images/icons/npm.svg" alt="npmjs">
+                </a>
+            </li>
+            <li>
                 <a target="_blank" rel="noopener" href="https://stackoverflow.com/questions/tagged/ng-ticker">
                     <img src="assets/images/icons/stackoverflow.svg" alt="stackoverflow">
                 </a>
