--- a/projects/web-app/src/app/common/top-menu/top-menu.component.html
+++ b/projects/web-app/src/app/common/top-menu/top-menu.component.html
@@ -7,7 +7,7 @@
 
     <div class="header-info">
         <ul class="header-list">
-            <li>
+            <li class="npm-logo">
                 <a target="_blank" rel="noopener" href="https://www.npmjs.com/package/ng-ticker">
                     <img src="assets/images/icons/npm.svg" alt="npmjs">
                 </a>
